# Mortey

./: .env.example  .filicheese.py  .gitignore  .sesskey  File analysis.md  README.md  agenttest.py  analysis.MD  app.py  copy.py  db_init.py  debug.py  debug.txt  debug_report.json  langgraph.json  mock.py  msgtest.py  p6auth.txt  pyproject.toml  requirements.txt  run_gui.py  run_mortey.py  test-assistant-fixed.py  test-enhanced-assistant.py  test-fixed-assistant.py  test-fixed-assistant.txt  test_assistant.py  testcode.py  testconfig.py  validate_fixes.py
.langgraph_api/: .langgraph_ops.pckl
Backup/: =2.0.7  =2.32.0  agents2.py  checkpointer2.py  controller2.py  state2.py  test_assistant.py
agents/: agents.py  chat_agent.py  coder_agent.py  web_agent.py
api/: endpoints.py  main.py  models.py  run_api.py  test_api.py
config/: llm_config.txt  llm_config.yaml  llm_manager.py  p6_filter_config.json  settings.py  settings.txt
core/: assistant_core.py  assistant_core.txt  assistant_core2.py  checkpointer.py  circuit_breaker.py  controller.py  enhanced_assistant_core.py  enhanced_state.py  enhanced_supervisor.py  error_handling.py  file_processing_pipeline.py  p6_integration_manager.py  simplified_supervisor.py  state.py  state.txt  supervisor.py  voice_assistant.py
dev stuff/: Code Fix Plan.md  File analysis.md  dir tree.md  system prompt.md
docs/: LangGraph Detailed Function Reference_ Comprehensi.md  LangGraph Function Ecosystem_ Comprehensive Techni.md  adding new llm providers.md
gui/: chat_gui.py  gui_manager.py
new/: README.md
static/: index.html
(+50 files in other folders)
