[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mortey"
version = "0.1.0"
description = "Personal Voice Assistant"
dependencies = [
    "anthropic",
    "tavily-python",
    "langgraph",
    "langchain-community",
    "pydantic",
    "python-dotenv",
    "pyaudio",
    "pyttsx3",
    "SpeechRecognition",
    "pvporcupine"
]

# No need for complex package finding now
